# anvil

./: .gitignore  Makefile  NOTICE.md  README.md  pyproject.toml
anvil/: __init__.py  cli.py
anvil/commands/: _status_scan.py  edit.py  init.py  plan.py  run.py  serve.py  status.py
anvil/orchestrator/: gemini.py  phase_loader.py  plan_parsing.py  prompt_loader.py  schemas.py  sub_agents.py
anvil/pdd_workflows/: context.md  eval.md  init.md  plan.md  prompts.md  review.md  scaffold.md
anvil/pdd_workflows/references/: data-ml.md
anvil/prompts/sub-agents/: doc_scribe.v1.0.0.md  eval_smith.v1.0.0.md  graph_scribe.v1.0.0.md  node_forge.v1.0.0.md
anvil/server/: __init__.py  app.py
anvil/server/web/: index.html
examples/equity-research-agent/: README.md  graph.py
examples/equity-research-agent/docs/adr/: 001-fetch-market-data.md  002-add-fetch-catalyst-events-node.md  003-add-analyze-and-compare-node.md  004-implement-generate-report-node.md
examples/equity-research-agent/evals/: test_analyze_and_compare.py  test_fetch_catalyst_events.py  test_fetch_market_data.py  test_generate_report.py
examples/equity-research-agent/evals/golden/: analyze_and_compare.jsonl  fetch_catalyst_events.jsonl  fetch_market_data.jsonl  generate_report.jsonl
examples/equity-research-agent/pdd/context/: conventions.md  decisions.md  project.md
examples/equity-research-agent/pull-requests/: phase-01-pr.md  phase-02-pr.md  phase-03-pr.md  phase-04-pr.md
examples/research-claims-distiller/: README.md  graph.py
examples/research-claims-distiller/test-output/: pr.md
pdd/context/: conventions.md  decisions.md  project.md
pdd/prompts/features/edit/: PLAN-edit.md  (+4 more)
tests/: test_edit.py  test_init_greenfield.py  test_serve_bare.py  test_serve_web.py  test_status.py
(+41 files in other folders)
